@@ -28,7 +28,12 @@ users, such as cleanups of source code.
 
   7)
 
-  8)
+   o New functions copy_string_elements and copy_vector_elements are now
+     defined.  Compared to using SET_STRING_ELT and SET_VECTOR_ELT, these
+     allow copying of multiple elements without error checks on every element, 
+     and sometimes without old-to-new checks on every element.  A new function
+     copy_elements is also defined, for copying elements in any sort of vector
+     (duplicating non-atomic elements, and using copy_string_elements).
 
   9)
 
